--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mdb/consistent-nav": "1.2.7",
+    "@mdb/flora": "0.11.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "theme-ui": "^0.10.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
