--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 
 # testing
 /coverage
+# Test information
+cypress/videos
+cypress/screenshots
+
 
 # next.js
 /.next/
@@ -18,6 +22,7 @@
 # misc
 .DS_Store
 *.pem
+.idea/
 
 # debug
 npm-debug.log*
