--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "cypress": "^9.2.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "prettier": "2.5.1",
-    "typescript": "4.5.4"
+    "typescript": "^4.5.4"
   }
 }
