--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
+    "@testing-library/cypress": "^8.0.2",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "cypress": "^9.2.1",
