--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format:write": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format:check && yarn lint"
+    }
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -21,6 +27,7 @@
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "husky": "^4.3.8",
     "prettier": "2.5.1",
     "typescript": "4.5.4"
   }
