--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn format:check && yarn lint"
+      "pre-commit": "lint-staged"
     }
   },
   "dependencies": {
@@ -28,6 +28,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "husky": "^4.3.8",
+    "lint-staged": "^11.1.1",
     "prettier": "2.5.1",
     "typescript": "4.5.4"
   }
