--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "incremental": true,
     "types": ["cypress","@testing-library/cypress"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "rootDir": "src/",
+  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"]
 }
