--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -2,12 +2,12 @@ name: Pull Request Checks
 on:
     pull_request:
         branches: [main]
+env:
+    NPM_AUTH: ${{ secrets.ARTIFACTORY_NPM_AUTH }}
+    NPM_EMAIL: ${{ secrets.ARTIFACTORY_NPM_EMAIL }}
 jobs:
     check-formatting-and-lint:
         runs-on: ubuntu-latest
-        env:
-            NPM_AUTH: ${{ secrets.ARTIFACTORY_NPM_AUTH }}
-            NPM_EMAIL: ${{ secrets.ARTIFACTORY_NPM_EMAIL }}
         steps:
             - name: Checkout target branch
               uses: actions/checkout@v2
@@ -30,3 +30,62 @@ jobs:
               run: yarn format:check
             - name: Lint
               run: yarn lint
+    cypress-tests:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout target branch
+              uses: actions/checkout@v2
+            - name: Use Node 16.x
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '16.x'
+            - name: Cache node modules
+              uses: actions/cache@v2
+              id: cache
+              with:
+                  path: node_modules
+                  key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-node-
+            - name: Install dependencies
+              if: steps.cache.outputs.cache-hit != 'true'
+              run: yarn install --frozen-lockfile
+            - name: Install Cypress
+              if: steps.cache.outputs.cache-hit == 'true'
+              run: ./node_modules/.bin/cypress install
+            - name: Build
+              run: yarn build
+            - name: Run Cypress
+              uses: cypress-io/github-action@v2
+              with:
+                  install: false
+                  start: yarn start
+                  wait-on: 'http://localhost:3000'
+            - name: Generate artifacts on failure
+              uses: actions/upload-artifact@v2
+              if: ${{ failure() }}
+              with:
+                  name: cypress-screenshots
+                  path: cypress/screenshots
+    jest-tests:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout target branch
+              uses: actions/checkout@v2
+            - name: Use Node 16.x
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '16.x'
+            - name: Cache node modules
+              uses: actions/cache@v2
+              id: cache
+              with:
+                  path: node_modules
+                  key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-node-
+            - name: Install dependencies
+              if: steps.cache.outputs.cache-hit != 'true'
+              run: yarn install --frozen-lockfile
+            - name: Run Jest tests
+              run: yarn jest
