--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,4 +3,5 @@
   "compilerOptions": {
     "isolatedModules": false
   },
+  "include": ["./**/*.ts"], // Root-level .tsconfig excludes the cypress directory.
 }
