Add tsconfig for __tests__ directory, format tsconfigs

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "isolatedModules": false
-  },
-  "include": ["./**/*.ts"], // Root-level .tsconfig excludes the cypress directory.
+    "extends": "../tsconfig.json",
+    "compilerOptions": {
+        "isolatedModules": false
+    },
+    "include": ["./**/*.ts"] // Root-level .tsconfig excludes the cypress directory.
 }
