--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -89,3 +89,22 @@ jobs:
               run: yarn install --frozen-lockfile
             - name: Run Jest tests
               run: yarn jest
+    lhci:
+        name: Lighthouse
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - name: Use Node.js 16.x
+              uses: actions/setup-node@v1
+              with:
+                  node-version: 16.x
+            - name: yarn install, build
+              run: |
+                  yarn install
+                  yarn run build
+            - name: run Lighthouse CI
+              run: |
+                  yarn global add @lhci/cli@0.8.x
+                  lhci autorun
+              env:
+                  LHCI_GITHUB_APP_TOKEN: ${{secrets.LIGHTHOUSE_CI_TOKEN}}
