--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format:write": "prettier --write .",
-    "format:check": "prettier --check .",
+    "format:write": "prettier --write ./src",
+    "format:check": "prettier --check ./src",
     "test": "jest --watch",
-    "test:e2e": "cypress open"
+    "test:e2e": "cypress open",
+    "ci:lighthouse": "lhci autorun"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
-    
   },
   "dependencies": {
     "@emotion/css": "11.7.1",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.7.2",
+    "@lhci/cli": "0.7.2",
     "@testing-library/cypress": "8.0.2",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
@@ -40,8 +41,8 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "husky": "4.3.8",
-    "lint-staged": "11.1.1",
     "jest": "27.4.7",
+    "lint-staged": "11.1.1",
     "prettier": "2.5.1",
     "typescript": "4.5.4"
   }
