--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -98,13 +98,24 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: 16.x
-            - name: yarn install, build
+            - name: Cache node modules
+              uses: actions/cache@v2
+              id: cache
+              with:
+                  path: node_modules
+                  key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-node-
+            - name: Install dependencies
+              if: steps.cache.outputs.cache-hit != 'true'
+              run: yarn install --frozen-lockfile
+            - name: yarn build
               run: |
-                  yarn install
                   yarn run build
-            - name: run Lighthouse CI
-              run: |
-                  yarn global add @lhci/cli@0.7.2
-                  lhci autorun
+            - name: Run Lighthouse
+              uses: treosh/lighthouse-ci-action@v7
+              with:
+                  configPath: './lighthouserc.js'
+                  runs: 2
               env:
                   LHCI_GITHUB_APP_TOKEN: ${{secrets.LIGHTHOUSE_CI_TOKEN}}
