Add ref to lhci job

--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -98,6 +98,7 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: 16.x
+                  ref: ${{ github.event.pull_request.head.sha }}
             - name: Cache node modules
               uses: actions/cache@v2
               id: cache
