--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -113,9 +113,9 @@ jobs:
               run: |
                   yarn run build
             - name: Run Lighthouse
-              uses: treosh/lighthouse-ci-action@v7
+              uses: treosh/lighthouse-ci-action@v8
               with:
                   configPath: './lighthouserc.js'
                   runs: 2
               env:
-                  LHCI_GITHUB_TOKEN: ${{secrets.LIGHTHOUSE_CI_TOKEN}}
+                  LHCI_GITHUB_APP_TOKEN: ${{secrets.LIGHTHOUSE_CI_TOKEN}}
