--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -110,12 +110,10 @@ jobs:
               if: steps.cache.outputs.cache-hit != 'true'
               run: yarn install --frozen-lockfile
             - name: yarn build
-              run: |
-                  yarn run build
+              run: yarn run build
             - name: Run Lighthouse
-              uses: treosh/lighthouse-ci-action@v8
-              with:
-                  configPath: './lighthouserc.js'
-                  runs: 2
               env:
                   LHCI_GITHUB_APP_TOKEN: ${{secrets.LIGHTHOUSE_CI_TOKEN}}
+              run: |
+                  yarn global add @lhci/cli@0.8.x
+                  lhci autorun
