--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -29,7 +29,7 @@ jobs:
             - name: yarn build
               run: yarn run build
             - name: Install Lighthouse
-              run: yarn global install @lhci/cli@0.8.x
+              run: yarn global add @lhci/cli@0.8.x
             - name: Run Lighthouse
               run: lhci autorun
               env:
