--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -113,9 +113,9 @@ jobs:
               run: yarn install --frozen-lockfile
             - name: yarn build
               run: yarn run build
+            - name: Install Lighthouse
+              run: yarn global add @lhci/cli@0.8.x
             - name: Run Lighthouse
-              uses: treosh/lighthouse-ci-action@v8
-              with:
-                  configPath: './lighthouserc.js'
+              run: lhci autorun
               env:
                   LHCI_GITHUB_APP_TOKEN: ${{secrets.LIGHTHOUSE_CI_TOKEN}}
