--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
         }
     },
     "dependencies": {
+        "@apollo/client": "3.5.7",
         "@emotion/css": "11.7.1",
         "@emotion/react": "11.7.1",
         "@emotion/styled": "11.6.0",
         "@mdb/consistent-nav": "1.2.7",
         "@mdb/flora": "0.11.1",
+        "graphql": "16.2.0",
         "next": "12.0.7",
         "react": "17.0.2",
         "react-dom": "17.0.2",
@@ -39,8 +41,8 @@
         "eslint": "8.6.0",
         "eslint-config-next": "12.0.7",
         "husky": "4.3.8",
-        "lint-staged": "11.1.1",
         "jest": "27.4.7",
+        "lint-staged": "11.1.1",
         "prettier": "2.5.1",
         "typescript": "4.5.4"
     }
