--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "devDependencies": {
         "@emotion/babel-plugin": "11.7.2",
+        "@next/bundle-analyzer": "12.0.8",
         "@testing-library/cypress": "8.0.2",
         "@testing-library/jest-dom": "5.16.1",
         "@testing-library/react": "12.1.2",
@@ -39,8 +40,8 @@
         "eslint": "8.6.0",
         "eslint-config-next": "12.0.7",
         "husky": "4.3.8",
-        "lint-staged": "11.1.1",
         "jest": "27.4.7",
+        "lint-staged": "11.1.1",
         "prettier": "2.5.1",
         "typescript": "4.5.4"
     }
