--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@emotion/styled": "11.6.0",
         "@mdb/consistent-nav": "1.2.7",
         "@mdb/flora": "0.11.1",
-        "next": "12.0.7",
+        "next": "^12.0.9-canary.9",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "styled-components": "5.3.3",
@@ -39,8 +39,8 @@
         "eslint": "8.6.0",
         "eslint-config-next": "12.0.7",
         "husky": "4.3.8",
-        "lint-staged": "11.1.1",
         "jest": "27.4.7",
+        "lint-staged": "11.1.1",
         "prettier": "2.5.1",
         "typescript": "4.5.4"
     }
