--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
         "@emotion/styled": "11.6.0",
         "@mdb/consistent-nav": "1.2.7",
         "@mdb/flora": "0.11.1",
+        "apollo-link-rest": "0.9.0-rc.1",
         "graphql": "16.2.0",
-        "next": "^12.0.9-canary.9",
+        "graphql-anywhere": "4.2.7",
+        "next": "12.0.9-canary.9",
+        "qs": "6.10.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "styled-components": "5.3.3",
