--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "build:analyze": "ANALYZE=true next build",
         "start": "next start",
         "lint": "next lint",
         "format:write": "prettier --write .",
