--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -15,7 +15,7 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: '16.x'
-            - name: Deploy to prod
+            - name: Vercel Deploy to prod
               uses: amondnet/vercel-action@v20
               with:
                   vercel-token: ${{secrets.VERCEL_TOKEN}}
