Hit lambda function instead of strapi directly

--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -21,5 +21,10 @@ jobs:
                   vercel-token: ${{secrets.VERCEL_TOKEN}}
                   vercel-org-id: ${{secrets.VERCEL_ORG_ID}}
                   vercel-project-id: ${{secrets.VERCEL_PROJECT_ID}}
-                  vercel-args: '--prod --build-env NPM_AUTH=${{ secrets.ARTIFACTORY_NPM_AUTH }} --build-env NPM_EMAIL=${{ secrets.ARTIFACTORY_NPM_EMAIL }} --build-env STRAPI_URL=${{ secrets.STRAPI_DEV_URL }}'
+                  vercel-args: >
+                      --prod
+                      --build-env NPM_AUTH=${{ secrets.ARTIFACTORY_NPM_AUTH }}
+                      --build-env NPM_EMAIL=${{ secrets.ARTIFACTORY_NPM_EMAIL }}
+                      --build-env STRAPI_URL=${{ secrets.STRAPI_DEV_URL }}
+                      --build-env API_GATEWAY_URL=${{ secrets.API_GATEWAY_URL }}
                   scope: ${{secrets.VERCEL_ORG_ID}}
