--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -6,6 +6,7 @@ env:
     NPM_AUTH: ${{ secrets.ARTIFACTORY_NPM_AUTH }}
     NPM_EMAIL: ${{ secrets.ARTIFACTORY_NPM_EMAIL }}
     STRAPI_URL: ${{ secrets.STRAPI_DEV_URL }}
+    API_GATEWAY_URL: ${{ secrets.API_GATEWAY_URL }}
 jobs:
     check-formatting-and-lint:
         runs-on: ubuntu-latest
@@ -136,5 +137,9 @@ jobs:
                   vercel-token: ${{secrets.VERCEL_TOKEN}}
                   vercel-org-id: ${{secrets.VERCEL_ORG_ID}}
                   vercel-project-id: ${{secrets.VERCEL_PROJECT_ID}}
-                  vercel-args: '--build-env NPM_AUTH=${{ secrets.ARTIFACTORY_NPM_AUTH }} --build-env NPM_EMAIL=${{ secrets.ARTIFACTORY_NPM_EMAIL }} --build-env STRAPI_URL=${{ secrets.STRAPI_DEV_URL }}'
+                  vercel-args: >
+                      --build-env NPM_AUTH=${{ secrets.ARTIFACTORY_NPM_AUTH }}
+                      --build-env NPM_EMAIL=${{ secrets.ARTIFACTORY_NPM_EMAIL }}
+                      --build-env STRAPI_URL=${{ secrets.STRAPI_DEV_URL }}
+                      --build-env API_GATEWAY_URL=${{ secrets.API_GATEWAY_URL }}
                   scope: ${{secrets.VERCEL_ORG_ID}}
