--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
         "next": "12.0.9",
+        "node-fetch": "3.2.0",
         "qs": "6.10.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
