--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -134,6 +134,7 @@ jobs:
             - name: Deploy to staging
               uses: amondnet/vercel-action@v20
               with:
+                  github-token: ${{secrets.GITHUB_TOKEN}
                   vercel-token: ${{secrets.VERCEL_TOKEN}}
                   vercel-org-id: ${{secrets.VERCEL_ORG_ID}}
                   vercel-project-id: ${{secrets.VERCEL_PROJECT_ID}}
