--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
         "@emotion/react": "11.7.1",
         "@emotion/styled": "11.6.0",
         "@mdb/consistent-nav": "1.2.7",
-        "@mdb/flora": "0.11.1",
+        "@mdb/flora": "0.17.2",
         "apollo-link-rest": "0.9.0-rc.1",
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
+        "hex-rgb": "4.3.0",
         "next": "12.0.9",
         "qs": "6.10.3",
         "react": "17.0.2",
