--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,11 @@
         "types": ["cypress", "@testing-library/cypress"]
     },
     "rootDir": "src/",
-    "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+    "include": [
+        "next-env.d.ts",
+        "src/**/*.ts",
+        "src/**/*.tsx",
+        "external.d.ts"
+    ],
     "exclude": ["node_modules"]
 }
