--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
     "presets": ["next/babel"],
-    "plugins": ["@emotion"]
+    "plugins": [
+        "@emotion",
+        [
+            "@babel/plugin-transform-react-jsx",
+            {
+                "runtime": "automatic",
+                "importSource": "theme-ui"
+            }
+        ]
+    ]
 }
