--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "theme-ui": "0.10.0"
     },
     "devDependencies": {
+        "@babel/plugin-transform-react-jsx": "^7.17.3",
         "@emotion/babel-plugin": "11.7.2",
         "@next/bundle-analyzer": "12.0.8",
         "@testing-library/cypress": "8.0.2",
