--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "isolatedModules": true,
         "jsx": "preserve",
         "incremental": true,
-        "types": ["cypress", "@testing-library/cypress"]
+        "types": ["cypress", "@testing-library/cypress"],
+        "jsxImportSource": "theme-ui"
     },
     "rootDir": "src/",
     "include": [
