--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "styled-components": "5.3.3",
+        "swr": "^1.2.1",
         "theme-ui": "0.10.0"
     },
     "devDependencies": {
