--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@testing-library/cypress": "8.0.2",
         "@testing-library/jest-dom": "5.16.1",
         "@testing-library/react": "12.1.2",
+        "@testing-library/user-event": "14.0.0-beta.11",
         "@types/node": "17.0.12",
         "@types/react": "17.0.38",
         "cypress": "9.2.1",
