--- a/package.json
+++ b/package.json
@@ -32,9 +32,15 @@
         "qs": "6.10.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "remark": "^13.0.0",
+        "remark-directive": "^1.0.1",
+        "remark-gfm": "^1.0.0",
+        "sanitize-html": "^2.7.0",
         "styled-components": "5.3.3",
         "swr": "1.2.1",
-        "theme-ui": "0.10.0"
+        "theme-ui": "0.10.0",
+        "unist-util-visit": "^2.0.3",
+        "react-player": "^2.9.0"
     },
     "devDependencies": {
         "@babel/plugin-transform-react-jsx": "^7.17.3",
@@ -46,6 +52,7 @@
         "@testing-library/user-event": "14.0.0-beta.11",
         "@types/node": "17.0.12",
         "@types/react": "17.0.38",
+        "@types/sanitize-html": "^2.6.2",
         "cypress": "9.2.1",
         "eslint": "8.6.0",
         "eslint-config-next": "12.0.7",
