--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
     },
     "dependencies": {
         "@apollo/client": "3.5.7",
-        "@emotion/css": "11.7.1",
-        "@emotion/react": "11.7.1",
-        "@emotion/styled": "11.6.0",
+        "@emotion/css": "11.9.0",
+        "@emotion/react": "11.9.0",
+        "@emotion/styled": "11.8.1",
         "@mdb/consistent-nav": "1.2.7",
         "@mdb/flora": "0.19.3",
         "apollo-link-rest": "0.9.0-rc.1",
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
         "hex-rgb": "4.3.0",
-        "html-react-parser": "^1.4.11",
+        "html-react-parser": "1.4.11",
         "next": "12.1.0",
         "qs": "6.10.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
-        "react-player": "^2.9.0",
-        "remark": "^13.0.0",
-        "remark-directive": "^1.0.1",
-        "remark-gfm": "^1.0.0",
-        "sanitize-html": "^2.7.0",
+        "react-player": "2.10.0",
+        "remark": "13.0.0",
+        "remark-directive": "1.0.1",
+        "remark-gfm": "1.0.0",
+        "sanitize-html": "2.7.0",
         "styled-components": "5.3.3",
         "swr": "1.2.1",
         "theme-ui": "0.10.0",
