--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "hex-rgb": "4.3.0",
         "html-react-parser": "1.4.11",
         "next": "12.1.0",
+        "pluralize": "^8.0.0",
         "qs": "6.10.3",
         "react": "17.0.2",
         "react-dom": "17.0.2",
