--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@mdb/consistent-nav": "1.2.7",
         "@mdb/flora": "0.19.3",
         "apollo-link-rest": "0.9.0-rc.1",
+        "axios": "^0.27.2",
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
         "hex-rgb": "4.3.0",
