--- a/.drone.yml
+++ b/.drone.yml
@@ -17,6 +17,7 @@ steps:
   - name: build
     image: node:14.17.0
     commands:
+       - echo $NPM_EMAIL
        - yarn install
        - yarn run build
     environment:
@@ -26,6 +27,9 @@ steps:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL
+    build_args_from_env:
+      - NPM_AUTH
+      - NPM_EMAIL
 
   - name: s3-sync
     pull: if-not-exists
