--- a/.drone.yml
+++ b/.drone.yml
@@ -42,7 +42,7 @@ steps:
       AWS_BUCKET_NAME:
         from_secret: AWS_S3_BUCKET_NAME
     commands:
-      - aws s3 sync .next s3://${AWS_BUCKET_NAME}/developer --region us-east-1
+      - aws s3 sync .next s3://${AWS_S3_BUCKET_NAME}/developer --region us-east-1
         # Example cache args for cache control, exclusion etc, --cache-control public,max-age=31536000,immutable --exclude "*.js.map"
     when:
       event:
