--- a/.drone.yml
+++ b/.drone.yml
@@ -15,6 +15,8 @@ steps:
       from_secret: NPM_AUTH
     NPM_EMAIL:
       from_secret: NPM_EMAIL
+    STRAPI_URL:
+      from_secret: STRAPI_URL_STAGING
   settings:
     create_repository: true
     registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
