Add Strapi URL as build_arg

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,6 +24,7 @@ steps:
     build_args:
       - NPM_AUTH
       - NPM_EMAIL
+      - STRAPI_URL
     tags:
     - git-${DRONE_COMMIT_SHA:0:7}
     - latest
