--- a/.drone.yml
+++ b/.drone.yml
@@ -3,10 +3,6 @@ kind: pipeline
 type: kubernetes
 name: devcenter-frontend
 
-trigger:
-  branch:
-    - ah/migrate-to-kanopy-and-drone
-
 steps:
 - name: publish
   image: plugins/kaniko-ecr
@@ -53,3 +49,36 @@ steps:
   when:
     event:
     - push
+
+trigger:
+  branch:
+    - ah/migrate-to-kanopy-and-drone
+
+---
+kind: pipeline
+type: kubernetes
+name: deploy
+
+steps:
+- name: deploy-prod
+  image: quay.io/mongodb/drone-helm:v3
+  settings:
+    chart: mongodb/web-app
+    chart_version: 4.7.3
+    add_repos: [mongodb=https://10gen.github.io/helm-charts]
+    namespace: devrel
+    release: devcenter-frontend
+    values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend.devrel.prod.corp.mongodb.com
+    api_server: https://api.prod.corp.mongodb.com
+    kubernetes_token:
+      from_secret: prod_kubernetes_token
+    values_files: [ "environments/prod.yaml" ]
+  when:
+    event:
+    - push
+
+trigger:
+  event:
+    - promote
+  target:
+    - production
