Production deploy test

--- a/.drone.yml
+++ b/.drone.yml
@@ -77,8 +77,11 @@ steps:
     event:
     - push
 
+# trigger:
+#   event:
+#     - promote
+#   target:
+#     - production
 trigger:
-  event:
-    - promote
-  target:
-    - production
+  branch:
+    - ah/migrate-to-kanopy-and-drone-prod
