--- a/.drone.yml
+++ b/.drone.yml
@@ -50,9 +50,11 @@ steps:
     event:
     - push
 
-# trigger:
-#   branch:
-#     - ah/migrate-to-kanopy-and-drone
+trigger:
+  branch:
+    - main
+  event:
+    - push
 
 ---
 kind: pipeline
