--- a/.drone.yml
+++ b/.drone.yml
@@ -62,6 +62,32 @@ type: kubernetes
 name: devcenter-prod
 
 steps:
+- name: publish
+  image: plugins/kaniko-ecr
+  environment:
+    NPM_AUTH:
+      from_secret: NPM_AUTH
+    NPM_EMAIL:
+      from_secret: NPM_EMAIL
+    STRAPI_URL:
+      from_secret: STRAPI_URL
+  settings:
+    create_repository: true
+    registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+    repo: devrel/${DRONE_REPO_NAME}
+    build_args:
+      - NPM_AUTH
+      - NPM_EMAIL
+      - STRAPI_URL
+    tags:
+    - git-${DRONE_COMMIT_SHA:0:7}
+    - latest
+    access_key:
+      from_secret: ecr_access_key
+    secret_key:
+      from_secret: ecr_secret_key
+    values_files: [ "environments/prod.yaml" ]
+
 - name: deploy-prod
   image: quay.io/mongodb/drone-helm:v3
   settings:
