--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -27,3 +27,11 @@ probes:
     timeoutSeconds: 1
     successThreshold: 1
     failureThreshold: 3
+
+resources:
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
