--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -30,8 +30,8 @@ probes:
 
 resources:
   limits:
-    cpu: 100m
-    memory: 128Mi
+    cpu: 500m
+    memory: 1Gi
   requests:
-    cpu: 100m
-    memory: 128Mi
+    cpu: 500m
+    memory: 1Gi
