Revert resource limits for staging

--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -30,8 +30,8 @@ probes:
 
 resources:
   limits:
-    cpu: 500m
-    memory: 1Gi
+    cpu: 100m
+    memory: 128Mi
   requests:
-    cpu: 500m
-    memory: 1Gi
+    cpu: 100m
+    memory: 128Mi
