--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -30,8 +30,8 @@ probes:
 
 resources:
   limits:
-    cpu: 500m
-    memory: 1Gi
+    cpu: 1
+    memory: 2Gi
   requests:
-    cpu: 500m
-    memory: 1Gi
+    cpu: 1
+    memory: 2Gi
