--- a/.drone.yml
+++ b/.drone.yml
@@ -2,10 +2,15 @@
 depends_on: null
 kind: pipeline
 type: kubernetes
-name: devcenter-staging
+name: build-devcenter
+
+resources:
+  requests:
+    cpu: 4
+    memory: 2GiB
 
 steps:
-- name: publish
+- name: publish-staging
   image: plugins/kaniko-ecr
   environment:
     NPM_AUTH:
@@ -30,6 +35,35 @@ steps:
     secret_key:
       from_secret: ecr_secret_key
     values_files: [ "environments/staging.yaml" ]
+  when:
+    event:
+    - push
+
+- name: publish-production
+  image: plugins/kaniko-ecr
+  environment:
+    NPM_AUTH:
+      from_secret: NPM_AUTH
+    NPM_EMAIL:
+      from_secret: NPM_EMAIL
+    STRAPI_URL:
+      from_secret: STRAPI_URL_PROD
+  settings:
+    create_repository: true
+    registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+    repo: devrel/${DRONE_REPO_NAME}
+    build_args:
+      - NPM_AUTH
+      - NPM_EMAIL
+      - STRAPI_URL
+    tags:
+    - git-${DRONE_COMMIT_SHA:0:7}
+    - latest
+    access_key:
+      from_secret: ecr_access_key
+    secret_key:
+      from_secret: ecr_secret_key
+    values_files: [ "environments/prod.yaml" ]
   when:
     event:
     - push
@@ -61,35 +95,9 @@ trigger:
 depends_on: null
 kind: pipeline
 type: kubernetes
-name: devcenter-prod
+name: deploy-devcenter-prod
 
 steps:
-- name: publish
-  image: plugins/kaniko-ecr
-  environment:
-    NPM_AUTH:
-      from_secret: NPM_AUTH
-    NPM_EMAIL:
-      from_secret: NPM_EMAIL
-    STRAPI_URL:
-      from_secret: STRAPI_URL_PROD
-  settings:
-    create_repository: true
-    registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
-    repo: devrel/${DRONE_REPO_NAME}
-    build_args:
-      - NPM_AUTH
-      - NPM_EMAIL
-      - STRAPI_URL
-    tags:
-    - git-${DRONE_COMMIT_SHA:0:7}
-    - latest
-    access_key:
-      from_secret: ecr_access_key
-    secret_key:
-      from_secret: ecr_secret_key
-    values_files: [ "environments/prod.yaml" ]
-
 - name: deploy-prod
   image: quay.io/mongodb/drone-helm:v3
   settings:
@@ -107,5 +115,6 @@ steps:
 trigger:
   event:
     - promote
+    - rollback
   target:
     - production
