--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,7 @@
 depends_on: null
 kind: pipeline
 type: kubernetes
-name: build-devcenter
+name: build-devcenter-staging
 
 steps:
 - name: publish-staging
@@ -34,6 +34,35 @@ steps:
     event:
     - push
 
+- name: deploy-staging
+  image: quay.io/mongodb/drone-helm:v3
+  settings:
+    chart: mongodb/web-app
+    chart_version: 4.7.3
+    add_repos: [mongodb=https://10gen.github.io/helm-charts]
+    namespace: devrel
+    release: devcenter-frontend
+    values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend.devrel.staging.corp.mongodb.com
+    api_server: https://api.staging.corp.mongodb.com
+    kubernetes_token:
+      from_secret: staging_kubernetes_token
+    values_files: [ "environments/staging.yaml" ]
+  when:
+    event:
+    - push
+
+trigger:
+  branch:
+    - main
+  event:
+    - push
+
+---
+depends_on: null
+kind: pipeline
+type: kubernetes
+name: build-devcenter-prod
+
 - name: publish-production
   image: plugins/kaniko-ecr
   environment:
@@ -59,23 +88,6 @@ steps:
     secret_key:
       from_secret: ecr_secret_key
     values_files: [ "environments/prod.yaml" ]
-  when:
-    event:
-    - push
-
-- name: deploy-staging
-  image: quay.io/mongodb/drone-helm:v3
-  settings:
-    chart: mongodb/web-app
-    chart_version: 4.7.3
-    add_repos: [mongodb=https://10gen.github.io/helm-charts]
-    namespace: devrel
-    release: devcenter-frontend
-    values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend.devrel.staging.corp.mongodb.com
-    api_server: https://api.staging.corp.mongodb.com
-    kubernetes_token:
-      from_secret: staging_kubernetes_token
-    values_files: [ "environments/staging.yaml" ]
   when:
     event:
     - push
