--- a/.drone.yml
+++ b/.drone.yml
@@ -63,6 +63,7 @@ kind: pipeline
 type: kubernetes
 name: build-devcenter-prod
 
+steps:
 - name: publish-production
   image: plugins/kaniko-ecr
   environment:
