--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -35,3 +35,8 @@ resources:
   requests:
     cpu: 100m
     memory: 128Mi
+
+ingress:
+  enabled: true
+  path: /developer
+  hosts: ["mongodbcom-cdn.website.staging.corp.mongodb.com","devcenter-frontend.devrel.staging.corp.mongodb.com"]
