Remove ingress rule changes

--- a/.drone.yml
+++ b/.drone.yml
@@ -47,8 +47,8 @@ steps:
     chart_version: 4.7.3
     add_repos: [mongodb=https://10gen.github.io/helm-charts]
     namespace: devrel
-    release: devcenter-frontend
-    values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME}
+    release: devcenter-frontend-preview
+    values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend-preview.devrel.staging.corp.mongodb.com
     api_server: https://api.staging.corp.mongodb.com
     kubernetes_token:
       from_secret: staging_kubernetes_token
