Move registry into environment variable, add verification token, update branch

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,8 @@ steps:
   - name: publish-staging
     image: plugins/kaniko-ecr
     environment:
+      ECR_REGISTRY:
+        from_secret: ecr_registry
       NPM_AUTH:
         from_secret: NPM_AUTH
       NPM_EMAIL:
@@ -22,7 +24,7 @@ steps:
     settings:
       create_repository: true
       enable_cache: true
-      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      registry: ${ECR_REGISTRY}
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
         - NPM_AUTH
@@ -68,13 +70,16 @@ name: deploy-devcenter-staging
 steps:
   - name: deploy-staging
     image: quay.io/mongodb/drone-helm:v3
+    environment:
+      ECR_REGISTRY:
+        from_secret: ecr_registry
     settings:
       chart: mongodb/web-app
       chart_version: 4.7.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
       release: devcenter-frontend
-      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME}
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=${ECR_REGISTRY}/devrel/${DRONE_REPO_NAME}
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
@@ -117,6 +122,8 @@ steps:
   - name: publish-production
     image: plugins/kaniko-ecr
     environment:
+      ECR_REGISTRY:
+        from_secret: ecr_registry
       NPM_AUTH:
         from_secret: NPM_AUTH
       NPM_EMAIL:
@@ -126,7 +133,7 @@ steps:
     settings:
       create_repository: true
       enable_cache: true
-      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      registry: ${ECR_REGISTRY}
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
         - NPM_AUTH
@@ -147,7 +154,7 @@ steps:
 
 trigger:
   branch:
-    - main
+    - production
   event:
     - push
 
@@ -160,13 +167,16 @@ name: deploy-devcenter-prod
 steps:
   - name: deploy-prod
     image: quay.io/mongodb/drone-helm:v3
+    environment:
+      ECR_REGISTRY:
+        from_secret: ecr_registry
     settings:
       chart: mongodb/web-app
       chart_version: 4.7.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
       release: devcenter-frontend
-      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend.devrel.prod.corp.mongodb.com
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=${ECR_REGISTRY}/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend.devrel.prod.corp.mongodb.com
       api_server: https://api.prod.corp.mongodb.com
       kubernetes_token:
         from_secret: prod_kubernetes_token
@@ -202,6 +212,8 @@ steps:
     environment:
       APP_RELEASE:
         from_secret: app_release_staging
+      TOKEN:
+        from_secret: webhook_token
     commands:
     - git checkout "$${APP_RELEASE}" # "$${APP_RELEASE}" is the latest staging revision that was promoted successfully.
 
@@ -209,22 +221,25 @@ steps:
     image: alpine
     commands:
     - if [[ "${APP_ENV}" != "staging" ]]; then exit 78; fi
+    - if [[ "${APP_WEBHOOK_TOKEN}" != "${TOKEN}" ]]; then exit 78; fi
 
   - name: publish-staging-from-trigger
     image: plugins/kaniko-ecr
     environment:
+      APP_RELEASE:
+        from_secret: app_release_staging
+      ECR_REGISTRY:
+        from_secret: ecr_registry
       NPM_AUTH:
         from_secret: NPM_AUTH
       NPM_EMAIL:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
-      APP_RELEASE:
-        from_secret: app_release_staging
     settings:
       create_repository: true
       enable_cache: true
-      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      registry: ${ECR_REGISTRY}
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
         - NPM_AUTH
@@ -266,6 +281,8 @@ steps:
     environment:
       APP_RELEASE:
         from_secret: app_release_production
+      TOKEN:
+        from_secret: webhook_token
     commands:
     - git checkout "$${APP_RELEASE}" # "$${APP_RELEASE}" is the latest production revision that was promoted successfully.
 
@@ -273,22 +290,25 @@ steps:
     image: alpine
     commands:
     - if [[ "${APP_ENV}" != "production" ]]; then exit 78; fi
+    - if [[ "${APP_WEBHOOK_TOKEN}" != "${TOKEN}" ]]; then exit 78; fi
 
   - name: publish-prod-from-trigger
     image: plugins/kaniko-ecr
     environment:
+      APP_RELEASE:
+        from_secret: app_release_production
+      ECR_REGISTRY:
+        from_secret: ecr_registry
       NPM_AUTH:
         from_secret: NPM_AUTH
       NPM_EMAIL:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL_PROD
-      APP_RELEASE:
-        from_secret: app_release_production
     settings:
       create_repository: true
       enable_cache: true
-      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      registry: ${ECR_REGISTRY}
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
         - NPM_AUTH
