--- a/.drone.yml
+++ b/.drone.yml
@@ -202,13 +202,14 @@ steps:
     environment:
       APP_RELEASE:
         from_secret: app_release_staging
-      TOKEN:
-        from_secret: webhook_token
     commands:
     - git checkout "$${APP_RELEASE}" # "$${APP_RELEASE}" is the latest staging revision that was promoted successfully.
 
   - name: check-environment
     image: alpine
+    environment:
+      TOKEN:
+        from_secret: webhook_token
     commands:
     - if [[ "${APP_ENV}" != "staging" ]]; then exit 78; fi
     - if [[ "${APP_WEBHOOK_TOKEN}" != "${TOKEN}" ]]; then exit 78; fi
@@ -269,13 +270,14 @@ steps:
     environment:
       APP_RELEASE:
         from_secret: app_release_production
-      TOKEN:
-        from_secret: webhook_token
     commands:
     - git checkout "$${APP_RELEASE}" # "$${APP_RELEASE}" is the latest production revision that was promoted successfully.
 
   - name: check-environment
     image: alpine
+    environment:
+      TOKEN:
+        from_secret: webhook_token
     commands:
     - if [[ "${APP_ENV}" != "production" ]]; then exit 78; fi
     - if [[ "${APP_WEBHOOK_TOKEN}" != "${TOKEN}" ]]; then exit 78; fi
