Update env variables

--- a/.drone.yml
+++ b/.drone.yml
@@ -58,7 +58,7 @@ steps:
 
 trigger:
   branch:
-    - ah/old-devhub-rewrites-test
+    - main
   event:
     - push
 
@@ -126,6 +126,8 @@ steps:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL_PROD
+      DEVHUB_URL:
+        from_secret: DEVHUB_URL
     settings:
       create_repository: true
       enable_cache: true
@@ -135,6 +137,7 @@ steps:
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
+        - DEVHUB_URL
         - APP_RELEASE=${DRONE_COMMIT_SHA}
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}
@@ -228,6 +231,8 @@ steps:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
+      DEVHUB_URL:
+        from_secret: DEVHUB_URL
     settings:
       create_repository: true
       enable_cache: true
@@ -237,6 +242,7 @@ steps:
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
+        - DEVHUB_URL
         - APP_RELEASE
       tags:
         - devcenter-staging-build-${DRONE_BUILD_NUMBER}
@@ -296,6 +302,8 @@ steps:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL_PROD
+      DEVHUB_URL:
+        from_secret: DEVHUB_URL
     settings:
       create_repository: true
       enable_cache: true
@@ -305,6 +313,7 @@ steps:
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
+        - DEVHUB_URL
         - APP_RELEASE
       tags:
         - devcenter-prod-build-${DRONE_BUILD_NUMBER}
